# NXP_Sensor_SDK

./: .gitignore  Contents.md  NXP.Sensor_MSP.pdsc  README.md  SW-Content-Register.txt
boards/B-U585I-IOT02A/: B-U585I-IOT02A.clayer.yml  B-U585I-IOT02A.h  retarget_stdio.c  vio_B-U585I-IOT02A.c
boards/B-U585I-IOT02A/Board/B-U585I-IOT02A/STM32CubeMX/: FrameworkCubeMX.gpdsc  MX_Device.h  STM32CubeMX.ioc
boards/B-U585I-IOT02A/RTE/Device/STM32U585AIIx/: startup_stm32u585xx.s  startup_stm32u585xx.s.base@2.0.0  stm32u585xx_flash.sct.base@1.0.0
boards/EVK-MIMXRT1060/: MIMXRT1060-EVK.mex  evk-mimxrt1060.clayer.yml  evkmimxrt1060.c  evkmimxrt1060.h  main.c  main.h  retarget_stdio.c  vio_evkmimxrt1060.c
boards/EVK-MIMXRT1060/RTE/Board_Support/MIMXRT1062DVL6A/: clock_config.c  dcd.c  pin_mux.c
boards/EVK-MIMXRT1060/RTE/Device/MIMXRT1062DVL6A/: MIMXRT1062xxxxx_flexspi_nor.scf  MIMXRT1062xxxxx_flexspi_nor_sdram.scf  MIMXRT1062xxxxx_ram.scf  MIMXRT1062xxxxx_sdram.scf  MIMXRT1062xxxxx_sdram_txt.scf
boards/frdmk22f/: frdm_k22f.h  frdmk22f.clayer.yml  main.c  main.h  vio_frdm_k22f.c
boards/frdmk22f/RTE/Board_Support/MK22FN512VLH12/: pin_mux.c
boards/frdmk22f/RTE/Device/MK22FN512VLH12/: MK22FN512xxx12_ram.icf.base@1.0.0
boards/frdmk22f_a8974/: frdmk22f_a8974.clayer.yml
boards/frdmk22f_a8974/RTE/Board_Support/MK22FN512VLH12/: pin_mux.c
boards/lpcxpresso54114/: lpc54114.c  lpc54114.clayer.yml  lpc54114.h  lpcxpresso54114.clayer.yml  main.c  vio_lpc54114.c
boards/lpcxpresso54114/RTE/Board_Support/LPC54114J256BD64_cm4/: board.h  clock_config.h  pin_mux.c
boards/lpcxpresso54114/RTE/Device/LPC54114J256BD64_cm4/: RTE_Device.h
boards/lpcxpresso55s69/: lpc55s69.c  lpc55s69.h  lpcxpresso55s69.clayer.yml  main.c  main.h  vio_lpc55s69.c
boards/lpcxpresso55s69/RTE/Board_Support/LPC55S69JBD100_cm33_core0/: board.c  board.h  clock_config.h  pin_mux.c  pin_mux.h
boards/lpcxpresso55s69/RTE/Board_Support/LPC55S69JBD100_cm4/: clock_config.c
boards/lpcxpresso55s69/RTE/Board_Support/LPC55S69_cm33_core0/: board.c.base@1.0.0  pin_mux.c  pin_mux.c.base@1.0.0
boards/lpcxpresso55s69/RTE/Device/LPC55S69JBD100_cm33_core0/: LPC54114J256_cm4_ram.scf  LPC55S69_cm33_core0_flash.scf  LPC55S69_cm33_core0_flash.scf.base@1.0.0  LPC55S69_cm33_core0_ram.scf  LPC55S69_cm33_core0_ram.scf.base@1.0.0  RTE_Device.h
boards/lpcxpresso55s69/RTE/Device/LPC55S69_cm33_core0/: LPC55S69_cm33_core1_flash.scf  (+6 more)
drivers/gpio/: Driver_GPIO.h  gpio_driver.h
drivers/gpio/LPC5411x/: GPIO_LPC5411x.c  GPIO_LPC5411x.h  fsl_iocon_ex.h
drivers/gpio/LPC55S69/: GPIO_LPC55S69.c  GPIO_LPC55S69.h  fsl_gpio_ex.h
drivers/gpio/MK22F/: GPIO_MK22F.c  GPIO_MK22F.h
drivers/gpio/STM32U5xx/: GPIO_STM32U5xx.c
drivers/gpio/iMXRT1060/: GPIO_iMXRT1060.c  GPIO_iMXRT1060.h
examples/issdk/: issdk_hal.h
examples/issdk/sensors/fxas21002/: fxas21002.csolution.yml
examples/issdk/sensors/fxls8962/: fxls8962.csolution.yml
examples/issdk/sensors/fxls8962/interrupt/tmp/fxls8962_interrupt/frdmk22f_agmp03/release/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json
examples/issdk/sensors/fxls8974cf/: cdefault.yml  fxls8974cf.cdefault.yml  fxls8974cf.csolution.yml
examples/issdk/sensors/fxls8974cf/interrupt/tmp/fxls8974cf_interrupt/frdmk22f_a8974/release/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json
examples/issdk/sensors/fxls8974cf/interrupt/tmp/fxls8974cf_interrupt/lpcxpresso55S69_a8974/debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json
examples/issdk/sensors/fxls8974cf/poll/tmp/fxls8974cf_poll/lpcxpresso54114_a8974/release/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json
examples/issdk/sensors/fxos8700/: fxos8700.csolution.yml
examples/issdk/sensors/mag3110/: cdefault.yml  mag3110.cdefault.yml  mag3110.csolution.yml
examples/issdk/sensors/mpl3115/: mpl3115.cdefault.yml  mpl3115.csolution.yml
middleware/issdk/hal/: issdk_hal.h
middleware/issdk/sensors/: diff_p_drv.c  fxas21002_drv.c  fxas21002_drv.h  fxlc95000_drv.c  fxls8471q_drv.c  fxls8471q_drv.h  fxls8962_drv.c  fxls896x_drv.c  fxls8974_drv.c  fxls8974_drv.h  fxos8700_drv.c  mma9553_drv.c  mma9553_drv.h  register_io_i2c.h  register_io_spi.c  register_io_spi.h
packs/: NXP.Sensor_MSP.1.0.0-test.pack  README.md
packs/EVK-MIMXRT1060_BSP/: NXP.EVK-MIMXRT1060_BSP.pdsc
packs/FRDM-K22F_BSP/: NXP.FRDM-K22F_BSP.pdsc
packs/FREEMASTER/: Licenses.txt  NXP.FREEMASTER.pdsc
packs/ISSDK/: Licenses.txt  NXP.ISSDK.pdsc
packs/LPC54114_DFP/: DFP_SCR.yml  LPC54114.yml  LPC54114_cm0plus.SFR  LPC54114_cm4.SFR  Licenses.txt  NXP.LPC54114_DFP.pdsc
packs/LPC54114_DFP/arm/: LPC54114J256_cm0plus_ram.scf  keil_lib_power.lib  keil_lib_power_m0.lib  startup_LPC54114_cm0plus.S  startup_LPC54114_cm4.S
packs/LPC54114_DFP/cmsis_drivers/: fsl_gpio_cmsis.c  fsl_gpio_cmsis.h
packs/LPC54114_DFP/drivers/: fsl_iocon_ex.h
packs/LPC54114_DFP/iar/: LPC54114J256_cm0plus.icf  LPC54114J256_cm0plus_ram.icf  LPC54114J256_cm4_ram.icf  startup_LPC54114_cm0plus.s  startup_LPC54114_cm4.s
packs/LPC55S69_DFP/: NXP.LPC55S69_DFP.pdsc
packs/LPCXpresso54114_BSP/: NXP.LPCXpresso54114_BSP.pdsc  lpcxpresso54114.yml
packs/LPCXpresso54114_BSP/layer/: Board.clayer.yml  lpc54114.h  main.c  vio_lpc54114.c
packs/LPCXpresso55S69_BSP/: Licenses.txt  NXP.LPCXpresso55S69_BSP.pdsc
packs/MIMXRT1062_DFP/: Licenses.txt  NXP.MIMXRT1062_DFP.pdsc
packs/MK22F51212_DFP/: NXP.MK22F51212_DFP.pdsc
packs/MK22F51212_DFP/devices/MK22F51212/: MK22F51212.SFR
shields/a8974/: a8974.clayer.yml  frdm_stbi_a8974_shield.c  frdm_stbi_a8974_shield.h
shields/agm01/: agm01.clayer.yml  frdm_stbc_agm01_shield.c  frdm_stbc_agm01_shield.h
shields/agmp03/: agmp03.clayer.yml  frdm_stbc_agmp03_shield.c  frdm_stbc_agmp03_shield.h
shields/p3115/: FRDMSTBC-P3115-expansion_board_template.xml  frdm_stbc_p3115_shield.c  frdm_stbc_p3115_shield.h  p3115.clayer.yml
(+2743 files in other folders)
